--- a/src/Swachify.Api/appsettings.json
+++ b/src/Swachify.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=43.243.79.182;Port=5432;Database=swachify_prod;Username=postgres;Password=Admin@123"
+    "Default": "Host=43.243.79.182;Port=5432;Database=swachify_ca;Username=postgres;Password=Admin@123"
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
@@ -30,4 +30,5 @@
     "ClientSecret":"hzagecun0ttmotnkicttta5lirnjcph8",
     "SenderID":"RMCODE"
   }
+
 }
